nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: default
  labels:
    ms: singh
spec:
  volumes:
  - name: ms-volume
    emptyDir:
      sizeLimit: 200Mi
  containers:
  - image: nginx:latest
    name: nginx-ct1
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: ms-volume
  # - image: linuxserver/firefox
  #   name: firefox-ct1
  #   ports:
  #   - containerPort: 3000
