networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: ms-policy
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: ms
      operator: In
      values:
      - singh
  ingress:
  - ports:
    - port: 80
